--- a/public/assets/css/background.css
+++ b/public/assets/css/background.css
@@ -1,9 +1,10 @@
 .headerwebsite {
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     /* height: 100vh; */
     background: url('../img/1947484-min.webp') top center;
     background-size: cover;
+    background-attachment: fixed;
     padding-bottom: 70px;
     background-color: #312d2d;
 } 
